--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^19.2.3",
     "recharts": "^3.6.0",
     "jspdf": "2.5.1",
-    "html2canvas": "1.4.1"
+    "html2canvas": "1.4.1",
+    "@solana/web3.js": "1.91.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
