--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.34.0",
     "react": "^19.2.3",
+    "jspdf": "^3.0.4",
+    "@vitejs/plugin-react": "^5.1.2",
+    "vite": "^7.3.0",
+    "path": "^0.12.7",
     "react-dom": "^19.2.3",
+    "@google/genai": "^1.34.0",
     "recharts": "^3.6.0",
-    "jspdf": "2.5.1",
-    "html2canvas": "1.4.1",
-    "@solana/web3.js": "1.91.0",
-    "borsh": "0.7.0",
-    "buffer": "6.0.3"
+    "buffer": "^6.0.3",
+    "html2canvas": "^1.4.1",
+    "@solana/web3.js": "^1.98.4",
+    "borsh": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
